Fix alignment

--- a/src/app.scss
+++ b/src/app.scss
@@ -43,20 +43,6 @@ a, a:hover, a:visited {
       margin: 0 auto;
   }
 }
-.centered {
-  width: 50vw;
-  margin: 0 auto;
-}
-
-.lefty {
-  width: 33vw;
-  margin-left: 5vw;
-}
-
-.righty {
-  width: 33vw;
-  margin-left: 62vw;
-}
 
 .light {
   color: #444;
